--- a/src/components/CvTemplateComponents/CvTemplate.css
+++ b/src/components/CvTemplateComponents/CvTemplate.css
@@ -10,10 +10,8 @@
 #templateContainer {
   display: flex;
   flex-direction: column;
-  height: 800px;
   width: 100%;
   border: 1px solid black;
-  height: 100%;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
     rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
     rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -22,7 +20,6 @@
   padding: 10px;
   background-color: rgb(112, 143, 157);
   padding: 20px;
-  height: 10%;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
 }
